TEST_PROGRAMS/VALID/narges_aghakazemjourabbaf/factorial.min
# Compute Factorial
var factorial: int;
var n: int;

print "Enter a positive integer";
read n;

factorial = 1;

while n do
  factorial = factorial * n;
  n = n - 1;
done
   
print factorial;

