TEST_PROGRAMS/INVALID/evan_vassallo/incorrectProg3.min
#while loop with semicolon after done
var x: int;

x = 3;

while x do
  x = x - 1;
done;

